# pydacp

./: .gitignore  .gitlab-ci.yml  AUTHORS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py  toy_code.ipynb  toy_code_2.ipynb
benchmark/: benchmark-Copy1.py  benchmark-Copy2.py  benchmark.py
benchmark/data/: data_dacp_eigsonly.nc  data_dacp_vs_sparse_eigsonly.nc
dacp/: __init__.py  _version.py  dacp.py  solver.py
dacp/benchmark/: benchmark.py  benchmark_chebolution.py  benchmark_dacp_eigenvals_only.py  benchmark_eigenvals_and_vecs.py  benchmark_eigenvals_only.py  error_comparison.ipynb  orthogonality_analysis.ipynb
dacp/benchmark/data/: data_benchmark_eigvals_only.nc  data_benchmark_eigvals_only_2d.nc  data_dacp_eigsonly_1d.nc  data_dacp_vs_sparse.nc
dacp/examples/: example.py
dacp/tests/: example.py  test_eigh.py  test_eigvalsh.py  test_random_ham_new.py  tests.py
docs/: environment.yml  make.bat
docs/source/: AUTHORS.md  CHANGELOG.md  conf.py  index.md
docs/source/_templates/: layout.html
docs/source/documentation/: dacp.md
docs/source/tutorial/: example.md
src/: README.md  benchmark.py  dacp.py  householder_prototype.ipynb  minimal_householder.py  overlap_matrix_test.ipynb  test_deg.ipynb  test_householder.py  test_random_ham.py  test_random_ham_new.py  tests.py
src/dacp/: core.py  dacp.py
src/pyDACP/: chebyshev.py  core.py
tests/: tests.py
